    (Duo Zhang via wheat9)

    HDFS-9282. Make data directory count and storage raw capacity related tests
    FsDataset-agnostic. (Tony Wu via lei)

    HDFS-9318. considerLoad factor can be improved. (Kuhu Shukla via kihwal)

    HDFS-8335. FSNamesystem should construct FSPermissionChecker only if
    permission is enabled. (Gabor Liptak via wheat9)

  BUG FIXES

    HDFS-7501. TransactionsSinceLastCheckpoint can be negative on SBNs.
    (Gautam Gopalakrishnan via harsh)

    HDFS-5356. MiniDFSCluster should close all open FileSystems when shutdown()
    (Rakesh R via vinayakumarb)

    HDFS-7867. Update action param from "start" to "prepare" in rolling upgrade
    javadoc (J.Andreina via vinayakumarb)

    HDFS-3325. When configuring "dfs.namenode.safemode.threshold-pct" to a value
    greater or equal to 1 there is mismatch in the UI report
    (J.Andreina via vinayakumarb)

    HDFS-8002. Website refers to /trash directory. (Brahma Reddy Battula via
    aajisaka)

    HDFS-7261. storageMap is accessed without synchronization in
    DatanodeDescriptor#updateHeartbeatState() (Brahma Reddy Battula via Colin
    P. McCabe)

    HDFS-7997. The first non-existing xattr should also throw IOException.
    (zhouyingchao via yliu)

    HDFS-7922. ShortCircuitCache#close is not releasing
    ScheduledThreadPoolExecutors (Rakesh R via Colin P. McCabe)

    HDFS-5215. dfs.datanode.du.reserved is not considered while computing
    available space ( Brahma Reddy Battula via Yongjun Zhang)

    HDFS-7725. Incorrect "nodes in service" metrics caused all writes to fail.
    (Ming Ma via wang)

    HDFS-8096. DatanodeMetrics#blocksReplicated will get incremented early and
    even for failed transfers (vinayakumarb)

    HDFS-7939. Two fsimage_rollback_* files are created which are not deleted
    after rollback. (J.Andreina via vinayakumarb)

    HDFS-8111. NPE thrown when invalid FSImage filename given for
    'hdfs oiv_legacy' cmd ( surendra singh lilhore via vinayakumarb )
